--- a/ROXII WEBSITE/index.html
+++ b/ROXII WEBSITE/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MDL SITE</title>
+    <title>ROXII JQ</title>
+
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/vendor/angular.js"></script>
     <link rel="stylesheet" href="css/foundation.css">
@@ -21,19 +24,17 @@
       <span data-responsive-toggle="topbar-responsive" data-hide-for="medium">
         <button class="menu-icon" type="button" data-toggle></button>
       </span>
-      <a class="topbar-responsive-logo" href="#"><strong>MDL SITE</strong></a>
+      <a class="topbar-responsive-logo" href="#"><strong>ROXII JQ</strong></a>
     </div>
     <div id="topbar-responsive" class="topbar-responsive-links">
       <div class="top-bar-right">
         <ul class="menu simple vertical medium-horizontal">
           <li><a href="#">Home</a></li>
           <li><a href="about/index.html">About</a></li>
-          <li><a href="Services/index.html">Services</a></li>
           <li><a href="works/index.html">Works</a></li>
-          <li><a href="news/index.html">News</a></li>
           <li><a href="contact/index.html">Contact</a></li>
           <li>
-            <button type="button" class="button hollow topbar-responsive-button">Categories</button>
+            <button type="button" class="button hollow topbar-responsive-button"></button>
           </li>
         </ul>
       </div>
@@ -51,8 +52,8 @@
     <!-- *Begin Header -->
     <div class="marketing-site-hero">
       <div class="marketing-site-hero-content">
-        <h1>Yeti Snowcone Agency</h1>
-        <p class="subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
+        <h1>Roxii Jq Graphic Desing</h1>
+        <p class="subheader">  </p>
         <a href="#" class="round button">learn more</a>
       </div>
     </div>
@@ -137,9 +138,7 @@
                 <ul class="menu marketing-site-footer-bottom-links">
                   <li><a href="#">Home</a></li>
                   <li><a href="#">About</a></li>
-                  <li><a href="#">Services</a></li>
                   <li><a href="#">Works</a></li>
-                  <li><a href="#">News</a></li>
                   <li><a href="#">Contact</a></li>
                 </ul>
               </div>
