--- a/ROXII WEBSITE/about/index.html
+++ b/ROXII WEBSITE/about/index.html
@@ -21,19 +21,17 @@
       <span data-responsive-toggle="topbar-responsive" data-hide-for="medium">
         <button class="menu-icon" type="button" data-toggle></button>
       </span>
-      <a class="topbar-responsive-logo" href="#"><strong>MDL SITE</strong></a>
+      <a class="topbar-responsive-logo" href="#"><strong>ROXII JQ</strong></a>
     </div>
     <div id="topbar-responsive" class="topbar-responsive-links">
       <div class="top-bar-right">
         <ul class="menu simple vertical medium-horizontal">
           <li><a href="../index.html">Home</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="../Services/index.html">Services</a></li>
           <li><a href="../works/index.html">Works</a></li>
-          <li><a href="../news/index.html">News</a></li>
           <li><a href="../contact/index.html">Contact</a></li>
           <li>
-            <button type="button" class="button hollow topbar-responsive-button">Categories</button>
+            <button type="button" class="button hollow topbar-responsive-button"></button>
           </li>
         </ul>
       </div>
@@ -129,9 +127,7 @@
                 <ul class="menu marketing-site-footer-bottom-links">
                   <li><a href="../index.html">Home</a></li>
                   <li><a href="#">About</a></li>
-                  <li><a href="../Services/index.html">Services</a></li>
                   <li><a href="../works/index.html">Works</a></li>
-                  <li><a href="../news/index.html">News</a></li>
                   <li><a href="../contact/index.html">Contact</a></li>
                 </ul>
               </div>
