--- a/ROXII WEBSITE/works/index.html
+++ b/ROXII WEBSITE/works/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Works</title>
+
     <script src="../js/vendor/angular.js"></script>
     <link rel="stylesheet" href="../css/foundation.css">
     <link rel="stylesheet" href="../css/app.css">
@@ -20,19 +21,17 @@
       <span data-responsive-toggle="topbar-responsive" data-hide-for="medium">
         <button class="menu-icon" type="button" data-toggle></button>
       </span>
-      <a class="topbar-responsive-logo" href="#"><strong>MDL SITE</strong></a>
+      <a class="topbar-responsive-logo" href="#"><strong>ROXII JQ</strong></a>
     </div>
     <div id="topbar-responsive" class="topbar-responsive-links">
       <div class="top-bar-right">
         <ul class="menu simple vertical medium-horizontal">
           <li><a href="../index.html">Home</a></li>
           <li><a href="../about/index.html">About</a></li>
-          <li><a href="../Services/index.html">Services</a></li>
           <li><a href="#">Works</a></li>
-          <li><a href="../news/index.html">News</a></li>
           <li><a href="../contact/index.html">Contact</a></li>
           <li>
-            <button type="button" class="button hollow topbar-responsive-button">Categories</button>
+            <button type="button" class="button hollow topbar-responsive-button"></button>
           </li>
         </ul>
       </div>
@@ -128,9 +127,7 @@
                 <ul class="menu marketing-site-footer-bottom-links">
                   <li><a href="../index.html">Home</a></li>
                   <li><a href="../about/index.html">About</a></li>
-                  <li><a href="../Services/index.html">Services</a></li>
                   <li><a href="#">Works</a></li>
-                  <li><a href="../news/index.html">News</a></li>
                   <li><a href="../contact/index.html">Contact</a></li>
                 </ul>
               </div>
