--- a/ROXII WEBSITE/index.html
+++ b/ROXII WEBSITE/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROXII JQ</title>
-    
+
 
 
 
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/footer.css">
 
 
+
   <!-- *Begin Nav -->
   <nav class="top-bar topbar-responsive">
     <div class="top-bar-title">
@@ -28,6 +29,11 @@
       </span>
       <a class="topbar-responsive-logo" href="#"><strong>ROXII JQ</strong></a>
     </div>
+    <div class="parallax"></div>
+
+    <div style="height:100px;background-color:violet;font-size:36px">
+    </div>
+
     <div id="topbar-responsive" class="topbar-responsive-links">
       <div class="top-bar-right">
         <ul class="menu simple vertical medium-horizontal">
@@ -45,11 +51,6 @@
 
 
   <!-- *End Nav -->
-
-
-
-
-
 
     <!-- *Begin Header -->
     <div class="marketing-site-hero">
@@ -72,7 +73,7 @@
            <label>Name:</label>
            <input type="text" ng-model="yourName" placeholder="Enter a name here">
            <hr>
-           <h1>Hello {{yourName}}!</h1>
+           <h1>... </h1>
          </div>
       <!-- *End Content -->
 
@@ -96,7 +97,7 @@
                <h4 class="marketing-site-footer-title">Contact Info</h4>
               <div class="marketing-site-footer-block">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <p>100 W Rincon<br>San Francisco, CA 94015</p>
+                <p>10009 39th Ave <br>Corona, NY 11368</p>
               </div>
               <div class="marketing-site-footer-block">
                 <i class="fa fa-phone" aria-hidden="true"></i>
@@ -104,7 +105,7 @@
               </div>
               <div class="marketing-site-footer-block">
                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                <p>yetirules@fakeemail.com</p>
+                <p>maryroxana97@gmail.com</p>
               </div>
             </div>
             <div class="medium-4 columns">
@@ -118,17 +119,6 @@
                 </div>
                 <div class="column column-block">
                   <img src="https://placehold.it/75" alt="" />
-                </div>
-                <div class="column column-block">
-                  <img src="https://placehold.it/75" alt="" />
-                </div>
-                <div class="column column-block">
-                  <img src="https://placehold.it/75" alt="" />
-                </div>
-                <div class="column column-block">
-                  <img src="https://placehold.it/75" alt="" />
-                </div>
-              </div>
             </div>
           </div>
           <div class="marketing-site-footer-bottom">
